// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureDiscovery.ts should render correctly 1`] = `

<div class="v-feature-discovery v-feature-discovery--active v-feature-discovery--movable theme--light"
     style="left: -200px; top: -200px; height: 400px; width: 400px; pointer-events: auto;"
>
  <div class="v-feature-discovery__backdrop elevation-4 primary">
  </div>
  <div class="v-feature-discovery__highlight white"
       style="height: 35.35533905932738px; width: 35.35533905932738px;"
  >
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should render correctly when flat 1`] = `

<div class="v-feature-discovery v-feature-discovery--flat v-feature-discovery--active v-feature-discovery--movable theme--light"
     style="left: -200px; top: -200px; height: 400px; width: 400px; pointer-events: auto;"
>
  <div class="v-feature-discovery__backdrop primary">
  </div>
  <div class="v-feature-discovery__highlight white"
       style="height: 35.35533905932738px; width: 35.35533905932738px;"
  >
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should toggle 1`] = `

<div class="v-feature-discovery v-feature-discovery--active v-feature-discovery--movable theme--light"
     style="left: -200px; top: -200px; height: 400px; width: 400px; pointer-events: auto;"
>
  <div class="v-feature-discovery__backdrop elevation-4 primary">
  </div>
  <div class="v-feature-discovery__highlight white"
       style="height: 35.35533905932738px; width: 35.35533905932738px;"
  >
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should toggle 2`] = `

<div class="v-feature-discovery v-feature-discovery--movable theme--light"
     style="left: -200px; top: -200px; height: 400px; width: 400px; pointer-events: none;"
>
  <div class="v-feature-discovery__backdrop elevation-4 primary">
  </div>
  <div class="v-feature-discovery__highlight white"
       style="height: 35.35533905932738px; width: 35.35533905932738px;"
  >
  </div>
</div>

`;
